turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:11: error: type Red is not a member of object java.awt.Color
setCouleur(couleur:Color.Red)
                         ^